tests/specs/graph/fast_check/require.txt
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/mod.ts
import test = require("./other.ts");

console.log(test);

# https://jsr.io/@scope/a/1.0.0/other.ts

# mod.ts
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "resolutionMode": "import",
            "span": {
              "start": {
                "line": 0,
                "character": 7
              },
              "end": {
                "line": 0,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "./other.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/other.ts",
            "resolutionMode": "require",
            "span": {
              "start": {
                "line": 0,
                "character": 22
              },
              "end": {
                "line": 0,
                "character": 34
              }
            }
          }
        }
      ],
      "size": 57,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    },
    {
      "kind": "esm",
      "size": 0,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/other.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a@*": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[unsupported-require]: require statements are a CommonJS feature, which are not supported in ES modules
   --> https://jsr.io/@scope/a/1.0.0/mod.ts:1:1
    |
  1 | import test = require("./other.ts");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = hint: use an import statement instead

    info: CommonJS features such as require are not supported in ES modules
    docs: https://jsr.io/go/slow-type-unsupported-require
